--- a/CarStore/Views/Config/Details.cshtml
+++ b/CarStore/Views/Config/Details.cshtml
@@ -12,27 +12,51 @@
     <hr />
     @if (Model.Id == 1)
     {
-        <img src="#" alt="Gonfig megane life img" />
+        <img class="img" src="~/App_Images/renault-megane-cfg-life.jpg" alt="config megane life img" />
     }
     @if (Model.Id == 3)
     {
-        <img src="#" alt="Gonfig megane zen img" />
+        <img class="img" src="~/App_Images/renault-megane-cfg-zen.jpg" alt="config megane zen img" />
     }
     @if (Model.Id == 4)
     {
-        <img src="#" alt="Gonfig megane intanse img" />
+        <img class="img" src="~/App_Images/renault-megane-cfg-intense.jpg" alt="config megane intanse img" />
     }
     @if (Model.Id == 5)
     {
-        <img src="#" alt="Gonfig megane life img" />
+        <img class="img" src="~/App_Images/renault-duster-cfg-life.jpg" alt="config duster life img" />
     }
     @if (Model.Id == 6)
     {
-        <img src="#" alt="Gonfig megane zen img" />
+        <img class="img" src="~/App_Images/renault-duster-cfg-zen.jpg" alt="config duster zen img" />
     }
     @if (Model.Id == 7)
     {
-        <img src="#" alt="Gonfig megane intanse img" />
+        <img class="img" src="~/App_Images/renault-duster-cfg-intense.jpg" alt="config duster intanse img" />
+    }
+    @if (Model.Id == 8)
+    {
+        <img class="img" src="~/App_Images/audi-RS-7-cfg-base.png" alt="config rs7 base img" />
+    }
+    @if (Model.Id == 9)
+    {
+        <img class="img" src="~/App_Images/audi-Q-7-cfg-base.png" alt="config q7 base img" />
+    }
+    @if (Model.Id == 10)
+    {
+        <img class="img" src="~/App_Images/audi-RS-7-cfg-comfort.png" alt="config rs7 comfort img" />
+    }
+    @if (Model.Id == 12)
+    {
+        <img class="img" src="~/App_Images/audi-Q-7-cfg-comfort.png" alt="config q7 comfort img" />
+    }
+    @if (Model.Id == 13)
+    {
+        <img class="img" src="~/App_Images/audi-RS-7-cfg-premium.png" alt="config rs7 premium img" />
+    }
+    @if (Model.Id == 14)
+    {
+        <img class="img" src="~/App_Images/audi-Q-7-cfg-premium.png" alt="config q7 premium img" />
     }
     <dl>
         <dt>
@@ -77,6 +101,6 @@
 
     </dl>
 </div>
-<p>
+@*<p>
     @Html.ActionLink("Back to List", "Index")
-</p>
+</p>*@
