--- a/CarStore/Views/Brand/Details.cshtml
+++ b/CarStore/Views/Brand/Details.cshtml
@@ -20,9 +20,11 @@
         <h1>Brand info</h1>
         <a class="a" href="/PurchaseBuild/BrandChoose/@Model.Id">Cars</a>
     </div>
-        <div>
+    <div>
 
         <hr />
+        <a class="back-link" href="/Brand/Index"> < Back to brands</a>
+        <br>
         <div class="detils-img-div">
             @if (Model.Id == 1)
             {
@@ -103,9 +105,6 @@
 
         </div>
     </div>
-    <p>
-        <a class="back-link" href="/Brand/Index">Back to list</a>
-    </p>
-
+        
     <hr />
 </body>
