--- a/CarStore/Views/Config/Index.cshtml
+++ b/CarStore/Views/Config/Index.cshtml
@@ -20,6 +20,8 @@
 
     <h2>Configurations</h2>
 
+    <a class="back-link" href="/PurchaseBuild/BackToCarDetails/"> < Back </a>
+
     <table class="table-cc">
         <tr class="tr-cc">
             <th class="th-cc">
