--- a/CarStore/Views/Shared/_Layout.cshtml
+++ b/CarStore/Views/Shared/_Layout.cshtml
@@ -24,9 +24,8 @@
                     <a class="nav-link-car" href="/Brand/Index">ALL BRANDS</a>  
                     <a class="nav-link-car" href="/PurchaseBuild/BrandChoose/1">RENAULT</a>
                     <a class="nav-link-car" href="/PurchaseBuild/BrandChoose/2">AUDI</a>  |
-                    <a class="nav-link" href="/Purchase/Create">Purchase</a> 
-                    <a class="nav-link" href="/Home/Contact">(C)</a>
-                    <a class="nav-link" href="/Home/About">(A)</a>
+                    <a class="nav-link" href="/Home/Contact">Contact</a>
+                    <a class="nav-link" href="/Home/About">About</a>
                 </nav>
             </div>
         </div>
