--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -24,6 +24,15 @@
     </div>
     <hr />
     <h2>@Model.Name</h2>
+    @if (Model.Id == 1 || Model.Id == 2)
+    {
+        <a class="back-link" href="/CarModel/Index/1"> < Back to cars</a>
+    }
+
+    @if (Model.Id == 3 || Model.Id == 4)
+    {
+        <a class="back-link" href="/CarModel/Index/2"> < Back to cars</a>
+    }
 
     @*////////////////*@
     @*RENAULT MEGANE*@
@@ -265,17 +274,4 @@
         </div>
     }
 
-    @if (Model.Id == 1 || Model.Id == 2)
-    {
-        <p>
-            <a class="back-link" href="/CarModel/Index/1">Back to list</a>
-        </p>
-    }
-
-    @if (Model.Id == 3 || Model.Id == 4)
-    {
-        <p>
-            <a class="back-link" href="/CarModel/Index/2">Back to list</a>
-        </p>
-    }
 </body>        
