--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -19,6 +19,7 @@
     <body>
         <h1>Models</h1>
         <hr />
+        <a class="back-link" href="/CarType/Index"> < Back to types</a>
         <div class="div-empty">
             @if (Model.Count() == 0)
             {
@@ -55,7 +56,5 @@
             }
 
         </table>
-
-        <a class="back-link" href="/CarType/Index">Back to types</a>
 
     </body>
